[package]
edition = "2021"
name = "tv_lib"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
calm_io = "0.1.1"
crossterm = "0.23.0"
csv = "1.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
owo-colors = "3.2.0"
regex = "1.5.4"
unicode-truncate = "0.2.0"
